Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I095695f0dfaf97b6944010e51b3b1463c3b7fbb0

Former-commit-id: cf54fdb73b89514f90ba20f15833fcab0ec42ad4

--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -1252,7 +1252,7 @@
     <string name="wifi_p2p_settings_title" msgid="1689918226469221870">"Wi‑Fi Direct"</string>
     <string name="wifi_p2p_device_info" msgid="4304362679971797283">"Thông tin thiết bị"</string>
     <string name="wifi_p2p_persist_network" msgid="7942929491568227945">"Ghi nhớ kết nối này"</string>
-    <string name="wifi_p2p_menu_search" msgid="8383306178784876840">"Tìm kiếm thiết bị"</string>
+    <string name="wifi_p2p_menu_search" msgid="8383306178784876840">"Tìm thiết bị"</string>
     <string name="wifi_p2p_menu_searching" msgid="3428767661028761100">"Đang tìm kiếm…"</string>
     <string name="wifi_p2p_menu_rename" msgid="7059994112737743336">"Đổi tên thiết bị"</string>
     <string name="wifi_p2p_peer_devices" msgid="5158559154640283546">"Thiết bị ngang hàng"</string>
