--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -598,7 +598,7 @@
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"ضع طرف إصبعك على المستشعر."</string>
     <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"ضع الحافة اليسرى لإصبعك"</string>
     <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"ضع الحافة اليمنى لإصبعك"</string>
-    <string name="security_settings_sfps_enroll_finger_center_title" msgid="1320688855767675739">"ضَع وسط إصبعك على أداة الاستشعار"</string>
+    <string name="security_settings_sfps_enroll_finger_center_title" msgid="1320688855767675739">"ضَع وسط بصمة إصبعك على أداة الاستشعار"</string>
     <string name="security_settings_sfps_enroll_fingertip_title" msgid="2737520837684516446">"ضع طرف إصبعك على أداة الاستشعار"</string>
     <string name="security_settings_sfps_enroll_left_edge_title" msgid="9022963735924413343">"ضع الحافة اليسرى لإصبعك على أداة الاستشعار"</string>
     <string name="security_settings_sfps_enroll_right_edge_title" msgid="823106857743394392">"أخيرًا، ضع الحافة اليمنى لإصبعك على أداة الاستشعار"</string>
@@ -3573,7 +3573,7 @@
     <string name="vpn_create" msgid="7546073242936894638">"‏إضافة ملف شخصي لشبكة افتراضية خاصة (VPN)"</string>
     <string name="vpn_menu_edit" msgid="5100387853773792379">"تعديل الملف الشخصي"</string>
     <string name="vpn_menu_delete" msgid="4455966182219039928">"حذف الملف الشخصي"</string>
-    <string name="vpn_menu_lockdown" msgid="5284041663859541007">"‏شبكة افتراضية خاصة (VPN) قيد التشغيل دائمًا"</string>
+    <string name="vpn_menu_lockdown" msgid="5284041663859541007">"‏شبكة VPN قيد التشغيل دائمًا"</string>
     <string name="vpn_no_vpns_added" msgid="7387080769821533728">"‏لم تتم إضافة أي شبكات افتراضية خاصة (VPN)."</string>
     <string name="vpn_always_on_summary" msgid="2171252372476858166">"‏متابعة الاتصال بشبكة VPN في جميع الأوقات"</string>
     <string name="vpn_always_on_summary_not_supported" msgid="9084872130449368437">"عدم التوافق مع هذا التطبيق"</string>
@@ -5390,7 +5390,7 @@
     <string name="ambient_display_tap_screen_title" product="device" msgid="4423803387551153840">"النقر لفحص الجهاز"</string>
     <string name="ambient_display_tap_screen_summary" msgid="4480489179996521405">"للاطّلاع على الوقت والإشعارات والمعلومات الأخرى، انقر على شاشتك."</string>
     <string name="emergency_gesture_screen_title" msgid="3280543310204360902">"اتصالات الطوارئ"</string>
-    <string name="emergency_gesture_switchbar_title" msgid="7421353963329899514">"استخدام اتصالات الطوارئ"</string>
+    <string name="emergency_gesture_switchbar_title" msgid="7421353963329899514">"استخدام ميزة \"اتصالات الطوارئ\""</string>
     <string name="emergency_gesture_entrypoint_summary" msgid="4730874229911208834">"تحت إدارة <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="emergency_gesture_screen_summary" msgid="6640521030845132507">"اضغط على زر التشغيل بسرعة 5 مرات أو أكثر لبدء تنفيذ الإجراءات أدناه."</string>
     <string name="emergency_gesture_sound_setting_title" msgid="7153948164862156536">"تشغيل إنذار العد التنازلي"</string>
