Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ibb582089c3601dcd3dc8e5c47d36da97b0be9c0d

Former-commit-id: 3ce9e908f995ca3b98a748ca6a9340f1c9908e6c

--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -1330,8 +1330,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080 p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440 p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Volle resolusie gebruik meer van jou battery. As jy jou resolusie oorskakel, sal sommige programme dalk herbegin."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Gekies"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Kleure"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Natuurlik"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Gemaksimeer"</string>
