--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -1330,8 +1330,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"La resolución completa consume más batería. Cambiar la resolución puede provocar que algunas aplicaciones se reinicien."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Seleccionado"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Colores"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Naturales"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Mejorados"</string>
@@ -5150,7 +5149,7 @@
     <string name="app_info_storage_title" msgid="4076977173803093808">"Espacio usado"</string>
     <string name="webview_uninstalled_for_user" msgid="627352948986275488">"(opción desinstalada para <xliff:g id="USER">%s</xliff:g>)"</string>
     <string name="webview_disabled_for_user" msgid="5809886172032644498">"(opción inhabilitada para <xliff:g id="USER">%s</xliff:g>)"</string>
-    <string name="autofill_app" msgid="7595308061826307921">"Servicio de Autocompletar"</string>
+    <string name="autofill_app" msgid="7595308061826307921">"Servicio de autocompletado"</string>
     <string name="autofill_passwords" msgid="6708057251459761083">"Contraseñas"</string>
     <plurals name="autofill_passwords_count" formatted="false" msgid="7715009165029452622">
       <item quantity="other"><xliff:g id="COUNT_1">%1$d</xliff:g> contraseñas</item>
