--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -1330,8 +1330,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"La resolució completa consumeix més bateria. Si canvies la resolució, és possible que algunes aplicacions es reiniciïn."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Seleccionada"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Colors"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Naturals"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Millorats"</string>
@@ -1697,8 +1696,8 @@
     <string name="storage_wizard_init_v2_external_summary" msgid="6436419488235871823">"Per transferir fitxers i contingut multimèdia entre dispositius"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="781928899530539860">"Emmagatzematge portàtil"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Configura més tard"</string>
-    <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Vols formatar aquest suport (<xliff:g id="NAME">^1</xliff:g>)?"</string>
-    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Cal formatar aquest suport extern (<xliff:g id="NAME_0">^1</xliff:g>) per poder-hi emmagatzemar aplicacions, fitxers i contingut multimèdia. \n\nEn formatar-lo (<xliff:g id="NAME_1">^2</xliff:g>), se n\'esborrarà el contingut actual. Per tal d\'evitar que es perdi contingut, fes-ne còpies de seguretat en un altre dispositiu o <xliff:g id="NAME_2">^3</xliff:g>."</string>
+    <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Vols formatar aquesta <xliff:g id="NAME">^1</xliff:g>?"</string>
+    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Cal formatar la teva <xliff:g id="NAME_0">^1</xliff:g> per poder-hi emmagatzemar aplicacions, fitxers i contingut multimèdia. \n\nEn fer-ho, s\'esborrarà el contingut actual de <xliff:g id="NAME_1">^2</xliff:g>. Per tal d\'evitar que es perdi contingut, fes-ne còpies de seguretat en un altre dispositiu o <xliff:g id="NAME_2">^3</xliff:g>."</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"Formata (<xliff:g id="NAME">^1</xliff:g>)"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"Vols transferir el contingut (<xliff:g id="NAME">^1</xliff:g>)?"</string>
     <string name="storage_wizard_migrate_v2_body" product="tablet" msgid="4541523202790415721">"Pots transferir fitxers, contingut multimèdia i algunes aplicacions a aquest suport extern (<xliff:g id="NAME">^1</xliff:g>). \n\nEn fer-ho, s\'alliberarà espai d\'emmagatzematge de la tauleta (<xliff:g id="SIZE">^2</xliff:g>). Aquest procés trigarà <xliff:g id="DURATION">^3</xliff:g> aproximadament."</string>
