--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -1370,8 +1370,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p, FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p, QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Pełna rozdzielczość bardziej zużywa baterię. Po przełączeniu rozdzielczości niektóre aplikacje mogą wymagać ponownego uruchomienia."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Wybrano"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Kolory"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Naturalne"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Wzmocnione"</string>
