--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -1350,8 +1350,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080 пиксела FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440 пиксела QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Пуна резолуција користи више батерије. Ако пређете на ову резолуцију, неке апликације ће се можда рестартовати."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Изабрано је"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Боје"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Природне"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Појачане"</string>
